Enable to send messages through new logic API Changed production address to APIM

--- a/src/Kmd.Logic.Digitalpost.ConsoleSample/appsettings.json
+++ b/src/Kmd.Logic.Digitalpost.ConsoleSample/appsettings.json
@@ -4,22 +4,16 @@
       "Name": "Production",
       "AuthorizationServerTokenIssuerUri": "https://login.microsoftonline.com/logicidentityprod.onmicrosoft.com/oauth2/v2.0/token",
       "ScopeUri": "https://logicidentityprod.onmicrosoft.com/bb159109-0ccd-4b08-8d0d-80370cedda84/.default",
-      "ApiRootUri": "https://kmd-logic-api-prod-webapp.azurewebsites.net"
-    },
-    {
-      "Name": "Preprod",
-      "AuthorizationServerTokenIssuerUri": "https://login.microsoftonline.com/logicidentitydev.onmicrosoft.com/oauth2/v2.0/token",
-      "ScopeUri": "https://logicidentitydev.onmicrosoft.com/22786ea1-072f-4e0a-abd4-e9123e85c0a7/.default",
-      "ApiRootUri": "https://kmd-logic-api-preprod-webapp.azurewebsites.net"
+      "ApiRootUri": "https://gateway.kmdlogic.io/digital-post/v1"
     },
     {
       "Name": "Local",
       "AuthorizationServerTokenIssuerUri": "https://login.microsoftonline.com/logicidentitydev.onmicrosoft.com/oauth2/v2.0/token",
       "ScopeUri": "https://logicidentitydev.onmicrosoft.com/22786ea1-072f-4e0a-abd4-e9123e85c0a7/.default",
-      "ApiRootUri": "http://localhost:54095"
+      "ApiRootUri": "http://localhost:5000"
     }
   ],
-  "LogicEnvironmentName": "Preprod",
+  "LogicEnvironmentName": "Production",
   "LogicAccount": {
     // Get your Subscription ID at https://console.kmdlogic.io/subscriptions
     "SubscriptionId": "",
@@ -31,7 +25,7 @@
   "DigitalPost": {
     // EBoks configuration
     // Create your system id and material id in eboks portal and paste them below
-    "SystemId": null,    
+    "SystemId": null,
     "MaterialId": null
   }
 }
