Added configuration id instead of system id

--- a/src/Kmd.Logic.Digitalpost.ConsoleSample/appsettings.json
+++ b/src/Kmd.Logic.Digitalpost.ConsoleSample/appsettings.json
@@ -25,7 +25,7 @@
   "DigitalPost": {
     // EBoks configuration
     // Create your system id and material id in eboks portal and paste them below
-    "SystemId": null,
+    "ConfigurationId": null,
     "MaterialId": null
   }
 }
