--- a/sample/Kmd.Logic.DigitalPost.Client.Sample/appsettings.json
+++ b/sample/Kmd.Logic.DigitalPost.Client.Sample/appsettings.json
@@ -8,7 +8,8 @@
   "Metadata": null,
   "TokenProvider": {
     "ClientId": "",
-    "ClientSecret": ""
+    "ClientSecret": "",
+    "AuthorizationScope": ""
   },
   "DigitalPost": {
     "SubscriptionId": "00000000-0000-0000-0000-000000000000",
